<resources>
    <string name="app_name">TSFRS</string>
    <string name="login_text">Login</string>
    <string name="edittext_email"><font size="15">enter your Mobile No. or Email id</font></string>
    <string name="edittext_pwd"><font size="15">enter your password</font></string>
    <string name="btn_login">Login</string>
    <string name="email_or_mobile_no">Email or Mobile No.</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="field_executive_details">Field Executive Details</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="executive_name">Executive Name</string>
    <string name="zone">Zone</string>
    <string name="district">District</string>
    <string name="mandal">Mandal</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="enter_your_reason_for_request">Enter your reason for request</string>
    <string name="submit">Submit</string>
    <string name="capture_your_live_photo">Capture Your Live Photo*</string>
    <string name="photo_id_proof">Photo ID Proof*</string>
    <string name="ex_aadhaar_card_driving_licence_passport_voter_card">ex: Aadhaar Card, Driving Licence, Passport, Voter Card.</string>
    <string name="card_front_side">card front side</string>
    <string name="card_back_side">card back side</string>
    <string name="oprn_camera">Oprn Camera</string>
    <string name="accept_rnit_terms_amp_conditions"><![CDATA[Accept RNIT Terms & Conditions]]></string>
    <string name="search_village">Search Village</string>
    <string name="search_school">Search School</string>
    <string name="head_master">Head Master</string>
    <string name="email">Email</string>
    <string name="document_center">Document\nCenter</string>
    <string name="training_details">Training\nDetails</string>
    <string name="status_report">Status\nReport</string>
    <string name="student_enrollment">Student\nEnrollment</string>
    <string name="enter_staff">Enter Staff *</string>
    <string name="staff_desigation">Staff Designation *</string>
    <string name="staff_mobileno">Staff mobile no. *</string>
    <string name="staff_email">Staff email id *</string>
</resources>