<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="center_horizontal"
        style="@style/logo_style"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/heading_underline"
        android:text="@string/login_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/email_or_mobile_no"
        style="@style/label1_style"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/edittext_email"
        style="@style/editext1_style"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label1_style"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Password"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        style="@style/editext1_style"
        android:hint="@string/edittext_pwd"
        />

    <TextView
        android:id="@+id/tv_forgotpwd"
        style="@style/heading_underline1"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        style="@style/btn_style1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
</layout>