<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">
        <ImageView
            style="@style/logo_style"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/ivBack"
                    android:backgroundTint="@color/merun_red"
                    android:background="@drawable/back"
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>
                <TextView
                    android:layout_toRightOf="@id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/heading"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/field_executive_details"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp"
                    android:background="@drawable/top_rouded_bg"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/executive_name"
                        style="@style/label2_style"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sumanth Polavarapu"
                        style="@style/label3_style"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/light_gray"
                    android:layout_height="@dimen/_1sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp"
                    android:background="@drawable/bottom_rounded"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_no"
                        style="@style/label2_style"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8247599246"
                        style="@style/label3_style"
                        />
                </LinearLayout>



            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_id_proof"
                style="@style/label2_style"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ex_aadhaar_card_driving_licence_passport_voter_card"
                style="@style/label4_style_hint"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/camera_bg"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivCardFrontSide"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_camera"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"/>
                    <TextView
                        android:layout_below="@id/ivCardFrontSide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/card_front_side"
                        style="@style/label2_style_camera"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/camera_bg"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivCardBackSide"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_camera"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"/>
                    <TextView
                        android:layout_below="@id/ivCardBackSide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/card_back_side"
                        style="@style/label2_style_camera"
                        />
                </RelativeLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/capture_your_live_photo"
                style="@style/label2_style"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/camera_bg"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivLivePhoto"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_camera"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"/>
                    <TextView
                        android:layout_below="@id/ivLivePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/oprn_camera"
                        style="@style/label2_style_camera"
                        />
                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:text="@string/accept_rnit_terms_amp_conditions"
                android:textColor="#0D80B5"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnCancel"
                    style="@style/btn_style4_cancel"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="#58151c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/btn_style5_submit"
                    android:layout_weight="1"
                    android:textColor="#0a3622"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>