<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ImageView
        style="@style/logo_style"
         />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/field_executive_details"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/top_rouded_bg"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/executive_name"
                    style="@style/label2_style"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sumanth Polavarapu"
                    style="@style/label3_style"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="#FFF"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no"
                    style="@style/label2_style"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8247599246"
                    style="@style/label3_style"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="#FFF"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zone"
                    style="@style/label2_style"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zone 1"
                    style="@style/label3_style"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="#FFF"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district"
                    style="@style/label2_style"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ranga Reddy"
                    style="@style/label3_style"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="#FFF"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mandal"
                    style="@style/label2_style"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chevella"
                    style="@style/label3_style"
                    />
            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnEdit"
                    style="@style/btn_style2"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/btn_style3"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
</layout>